              (Kyle Morrison, Noble Paul via shalin)

2. SOLR-823:  Request parameter variables ${dataimporter.request.xxx} are not resolved
              (Mck SembWever, Noble Paul, shalin)

3. SOLR-728:  Add synchronization to avoid race condition of multiple imports working concurrently
              (Walter Ferrara, shalin)

4. SOLR-742:  Add ability to create dynamic fields with custom DataImportHandler transformers
              (Wojtek Piaseczny, Noble Paul, shalin)

5. SOLR-832:  Rows parameter is not honored in non-debug mode and can abort a running import in debug mode.
              (Akshay Ukey, shalin)

Documentation
----------------------

Other
----------------------
1. SOLR-782: Refactored SolrWriter to make it a concrete class and removed wrappers over SolrInputDocument
             (Noble Paul via shalin)

================== Release 1.3.0 20080915 ==================

Status
------
This is the first release since DataImportHandler was added to the contrib solr distribution.
The following changes list changes since the code was introduced, not since
the first official release.


Detailed Change List
--------------------

New Features
1. SOLR-700:  Allow configurable locales through a locale attribute in fields for NumberFormatTransformer.
              (Stefan Oestreicher, shalin)

Changes in runtime behavior

Bug Fixes
1. SOLR-704:  NumberFormatTransformer can silently ignore part of the string while parsing. Now it tries to
              use the complete string for parsing. Failure to do so will result in an exception.
              (Stefan Oestreicher via shalin)

2. SOLR-729:  Context.getDataSource(String) gives current entity's DataSource instance regardless of argument.
              (Noble Paul, shalin)

3. SOLR-726:  Jdbc Drivers and DataSources fail to load if placed in multicore sharedLib or core's lib directory.
              (Walter Ferrara, Noble Paul, shalin)

Other Changes

